close errant html tag

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <div id="container-large">
         <ul class="grid-wrap">
             <div class="grid-item-inside">
-                <a href="https://alisa.pizza/"
+                <a href="https://alisa.pizza/">
             </div>
         </ul>
     </div>
