--- a/projects.html
+++ b/projects.html
@@ -3,28 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALISA DOT PIZZA</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Projects - Alisa Blakeney</title>
+    <link rel="shortcut icon" href="./img/pizza.png">
+    <link rel="stylesheet" href="./css/sass/main.css" media="screen">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 </head>
-<body class="projects">
-    <header>
-        <div class="large title">
-            <a href="https://alisa.pizza" rel="home"> Alisa Blakeney</a>
+<body>
+    <div class="wrap">
+        <div class="section" id="title">Projects</div>
+        <div class="section" id="content">
+            <p><a href="/tree">A Tree Grew Through My Window</a> It can be called anything you want!</p>
         </div>
-        <nav class="small">
-            <ul class="menu">
-                <li><a href="https://alisa.pizza/projects" class="is-active">Projects</a></li>
-                <li><a href="https://alisa.pizza/about">About</a></li>
-                <li><a href="https://alisa.pizza/writing">Writing</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="container-large">
-        <ul class="grid-wrap">
-            <div class="grid-item-inside">
-                <a href="https://alisa.pizza/">
-            </div>
-        </ul>
+        <div class="grid">
+         </div>
+        <div class="section bottom-menu">
+        <!-- <hr /> -->
+            <p>
+                <a href="/projects">projects</a>
+            &#183; 
+                <a href="/posts">writing</a>
+            &#183; 
+                <a href="/about">info</a>
+            &#183; 
+                <a href="http://localhost:1313/">main</a>
+            </p>
+        </div>
+        
+
+        <div class="section footer">
+            <a href="mailto:hi@alisa.pizza">hi@alisa.pizza</a>
+        </div>
     </div>
 </body>
 </html>
