refine styling on footer menu

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </div>
     
         <div class="big-link">
-            <a href="/posts">
+            <a href="./writing.html">
                 writing
             </a>
         </div>
     
         <div class="big-link">
-            <a href="/about">
+            <a href="./about.html">
                 info
             </a>
         </div>
