--- a/writing.html
+++ b/writing.html
@@ -3,16 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Alisa Blakeney</title>
+    <title>Writing - Alisa Blakeney</title>
     <link rel="shortcut icon" href="./img/pizza.png">
     <link rel="stylesheet" href="./css/sass/main.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 </head>
 <body>
     <div class="wrap">
-        <div class="section" id="title">Projects</div>
+        <div class="section" id="title">Essays</div>
         <div class="section" id="content">
-            <p><a href="./tree.html">A Tree Grew Through My Window</a> It can be called anything you want!</p>
+            <p>Here is some things I have written that are tangentially about computers and art.</p>
+                <ul>
+                    <li>
+                        <a href="./gold.html">
+                            Goldsmiths Degree Show writing
+                        </a>
+                    </li>  
+                    <li>
+                        19 Mar 2016 --              
+                        <a href="./ecker.html">
+                            Making Sense of Place
+                        </a>
+                    </li>          
+                    <li>
+                        8 Aug 2015 --                 
+                        <a href="./pendrigh.html">
+                            Fluid Dynamics
+                        </a>
+                    </li>
+                </ul>
         </div>
         <div class="grid"></div>
         <div class="section bottom-menu">
