--- a/about.html
+++ b/about.html
@@ -3,12 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About - Alisa Blakeney</title>
+    <link rel="shortcut icon" href="./img/pizza.png">
+    <link rel="stylesheet" href="./css/sass/main.css" media="screen">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 </head>
 <body>
-    <div class= > 
-        <h1>ABOUT</h1>
-        <p> Alisa is great</p>
+    <div class="wrap">
+        <div class="section" id="title">About</div>
+        <div class="section" id="content">
+            <p>Some information about me.</p>
+            <p>Here is her <a href="https://github.com/alisay">GitHub</a>.</p>
     </div>
+ 
+    <div class="grid"></div>
+    <div class="section bottom-menu">
+        <hr />
+        <p>
+            <a href="./projects.html">projects</a>
+        &#183; 
+            <a href="./writing.html">writing</a>
+        &#183; 
+            <a href="./about.html">info</a>
+        &#183; 
+            <a href="./index.html">main</a>
+        </p>
+    </div>
+
+    <div class="section footer">
+        <a href="mailto:hi@alisa.pizza">hi@alisa.pizza</a>
+    </div>
+</div>
 </body>
 </html>
