add content to blog

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <div class="wrap">
         <div class="section" id="title">About</div>
         <div class="section" id="content">
-            <p>Some information about me.</p>
-            <p>Here is her <a href="https://github.com/alisay">GitHub</a>.</p>
+            <p>Alisa Blakeney curates exhibitions, codes software, writes texts, and joins clubs to take part in and understand the changes computing makes to culture. She co-directed the Perth artist-run space Paper Mountain (2013-2015), worked as a curator at Bunbury Regional Art Gallery (2014-2018) and was a co-founder of Compiler: a London-based platform for the production and presentation of new media art and dialogue (2017). Recent projects include <i>A Tree Grew Through My Window</i>, Taipei Artist Village, Taiwan (2019); <i>Synthetic Types</i>, Stedelijk Museum, Amsterdam (2019); <i>Landscape with Bear</i>, De Appel, Amsterdam (2019); <i>Ratio Club</i>, Bunbury (2018); and, <i>Noise Museum</i>, Heathcote Museum & Gallery, Western Australia (2017). Here is her <a href="https://github.com/alisay">GitHub</a>.</p>
+            <p><a href="./img/AYBCV.pdf">Download CV</a></p>
     </div>
  
     <div class="grid"></div>
