--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,9 @@
     <div class="wrap">
         <div class="section" id="title">Projects</div>
         <div class="section" id="content">
-            <p><a href="./tree.html">A Tree Grew Through My Window</a> It can be called anything you want!</p>
+            <p><a href="./tree.html">A Tree Grew Through My Window</a> Taipei Artist Village, Taiwan, 2019</p>
+            <p><a href="./tree.html">Landscape with Bear</a> De Appel, Amsterdam, 2019</p>
+            <p><a href="./matter.html">Does It Matter?</a> Compiler, New Cross, London 2017</p>
         </div>
         <div class="grid"></div>
         <div class="section bottom-menu">
