--- a/writing.html
+++ b/writing.html
@@ -15,10 +15,17 @@
             <p>Here is some things I have written that are tangentially about computers and art.</p>
                 <ul>
                     <li>
+                        12 Jun 2018 --
                         <a href="./gold.html">
-                            Goldsmiths Degree Show writing
+                            Mirror Mirror - Goldsmiths Degree Show 2018
                         </a>
                     </li>  
+                    <li>
+                        19 Mar 2016 --              
+                        <a href="./noise.html">
+                            Noise Museum
+                        </a>
+                    </li>          
                     <li>
                         19 Mar 2016 --              
                         <a href="./ecker.html">
