:pencil: add blog content

--- a/noise.html
+++ b/noise.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="section" id="title">Mirror Mirror</div>
-        <div class="section" id="content"> 12 June 2018 &#183; 782 words
+        <div class="section" id="title">Noise Museum</div>
+        <div class="section" id="content"> 17 June 2017 &#183; 782 words
             <div class="tag-container">
                 <span class="tag">
                     <a href="./tags/art.html">art</a>
