--- a/writing.html
+++ b/writing.html
@@ -21,11 +21,17 @@
                         </a>
                     </li>  
                     <li>
-                        19 Mar 2016 --              
+                        17 Jun 2017 --              
                         <a href="./noise.html">
                             Noise Museum
                         </a>
-                    </li>          
+                    </li>
+                    <li>
+                        24 Apr 2017 --              
+                        <a href="./temple.html">
+                            Thou Hast Been Faithful in a Very Interesting Way
+                        </a>
+                    </li>                    
                     <li>
                         19 Mar 2016 --              
                         <a href="./ecker.html">
@@ -34,8 +40,8 @@
                     </li>          
                     <li>
                         8 Aug 2015 --                 
-                        <a href="./pendrigh.html">
-                            Fluid Dynamics
+                        <a href="./blog.html">
+                            Final Post
                         </a>
                     </li>
                 </ul>
