:sparkles: add tag feature to blog

--- a/matter.html
+++ b/matter.html
@@ -19,15 +19,14 @@
                     <iframe id="embed" src="http://compiler.zone/gallery"  allowfullscreen title="Online exhibition"></iframe>
                 </div>
 
-                You can rearrange the elements in the online gallery above. 
-            </p>
+                You can rearrange the elements in the online gallery above. </p>
             <p><b>Does It Matter?</b> is a pulsating slime-scape permeating the boundaries of digital and organic, virtual and physical, and self and non-self. </p>
 
             <p>Bringing together five London-based artists whose work traces the relationship between matter and identity. Their work is intuitive, inquisitive and performative, investigating the way in which our individual realities are created through the mediation of pure form and raw matter.</p>
             
             <p> Through video, interactive installation, sound and slime, this exhibition challenges the idea of digital technology as virtual or immaterial. It reminds us that our relationship to the digital world is also one of materiality: of circuits, wires, and silicon. The inter/trans-materiality that emerges through this relationship creates messy, unstable substances that obstruct, disrupt and interfere with the surfaces of our identity.</p>
         </div>
-
+    </div>
     <div class="grid">
          <div>
             <a href="./img/matter1.jpg">
