--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
         <div class="big-link">
             <a href="./about.html">
-                info
+                alisa
             </a>
         </div>
 
