:pencil: add content to projects

--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
     <div class="wrap">
         <div class="section" id="title">Projects</div>
         <div class="section" id="content">
-            <p><a href="./tree.html">A Tree Grew Through My Window</a> Taipei Artist Village, Taiwan, 2019</p>
-            <p><a href="./tree.html">Landscape with Bear</a> De Appel, Amsterdam, 2019</p>
+            <p><a href="./appel.html">Landscape with Bear</a> De Appel, Amsterdam, 2019</p>
+            <p><a href="./ratio.html">Ratio Club</a> Bunbury, Western Australia 2018</p>
             <p><a href="./matter.html">Does It Matter?</a> Compiler, New Cross, London 2017</p>
         </div>
         <div class="grid"></div>
