:wheelchair: update html according to w3c validator advice

--- a/src/blog.html
+++ b/src/blog.html
@@ -37,6 +37,7 @@
                         <li>the full list of allergies</li>
                     </ol></p>
                 <p><img src="./img/blog1.gif" alt="FTGE"></p>
+                <h3>-Alisa Blakeney</h3>
         </section>
     </div>
     <div class="grid"></div>
