--- a/src/gold.html
+++ b/src/gold.html
@@ -27,6 +27,7 @@
             <p><img src="./img/mirror1.jpg" alt="Oscar Cass-Darweish, Between Frames, 2017"></p>
             <p>Memory and the archive are fundamental to the negotiation and exercise of power. In contemporary society, power is personalised. Each person owns their own body as “human capital”, which can be exchanged through the market that stands in for the principle, form and model for the state. In this society, all human interactions are economic transactions.</p>
             <p>Computers, of course, are key to creating the empowered and productive individual. They allow the individual to know and to act, to navigate the complexities of the world and to be tracked and quantified in turn. However, Wendy Hui Kyong Chun argues that computers are not simply a tool of neoliberalism, but also the medium through which we might pleasurably create alternative visions. We can achieve this by fostering a network of relations through the “acting without knowing” on which freedom depends.</p>
+            <h3>-Alisa Blakeney</h3>
         </section>
     </div>
     <div class="grid"></div>
