--- a/src/ratio.html
+++ b/src/ratio.html
@@ -16,7 +16,7 @@
             <p>Ratio Club was a free six-week workshop program exploring computation as creative practice. Participants took part in a series of sessions blending practical tutorials with critical discussions.</p>
             <p>The workshops were structured to introduce novice coders to basic programming concepts, algorithmic approaches to digital design and modelling, and strategies for employing these in artistic practice.</p>
             <p>The sessions were targeted towards creative practitioners who have limited prior coding experience, but who may have a broad array of other technical skills and experience.</p>
-            <p>Syllabus:</p>
+            <h3>Syllabus:</h3>
             <table>
                 <thead>
                 <tr>
@@ -27,30 +27,31 @@
                 <tbody>
                 <tr>
                 <td>0</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_0">HTML & JavaScript</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_0" target="_blank">HTML & JavaScript</a></td>
                 </tr>
                 <tr>
                 <td>1</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_1">Shapes, Colours, Properties, Functions</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_1" target="_blank">Shapes, Colours, Properties, Functions</a></td>
                 </tr>
                 <tr>
                 <td>2</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_2">Animation & Repetition, Interaction & Repetition</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_2" target="_blank">Animation & Repetition, Interaction & Repetition</a></td>
                 </tr>
                 <tr>
                 <td>3</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_3">Hark! Event Listeners</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_3" target="_blank">Hark! Event Listeners</a></td>
                 </tr>
                 <tr>
                 <td>4</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_4">Experiments in Structure</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_4" target="_blank">Experiments in Structure</a></td>
                 </tr>
                 <tr>
                 <td>5</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_5">Small Parts & Modular Designs</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_5" target="_blank">Small Parts & Modular Designs</a></td>
                 </tr>
+                <tr>
                 <td>6</td>
-                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_6">3D</td>
+                <td><a href="https://www.freewifi.fyi/ratioclub/workshops/week_6" target="_blank">3D</a></td>
                 </tr>
                 </tbody>
             </table>
