--- a/src/temple.html
+++ b/src/temple.html
@@ -31,6 +31,7 @@
             <p>Matthew Fuller, in Behind the Blip, quotes Donald Norman, who suggests user-centered design should allow for “interacting with the task, not with the computer”. The blurring of functions resulting from the novel use of HolyC and DolDoc means that interacting with the task in TempleOS is comparable to interacting with the computer. Because every piece of code in TempleOS is JIT compiled on demand, it is possible to overwrite the running operating system fairly easily. For a careless user (i.e. me) misplaced keystrokes result in crashing the operating system with frustrating regularity.</p>
             <p><img src="./img/temple2.gif" alt="TempleOS"></p>
             <p>The full essay is 5000 words so if you want to read the rest of it, let me know and I'll email the PDF.</p>
+            <h3>- Alisa Blakeney</h3>
         </section>
     </div>
     <div class="section bottom-menu">
