:lock: implement subresource integrity on css styling

--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Alisa Blakeney</title>
     <link rel="shortcut icon" href="./img/pizza.png">
-    <link rel="stylesheet" href="./css/sass/main.css" media="screen">
+    <link rel="stylesheet" href="./css/sass/main.css" integrity="sha512-txdzbHTsiKH9a5r1/RFIskM8ml6goUhgqTjXy48PJchu8fAbXgmRDi8s7emyxw8VbKh0DxTNGxO/6WS/xQYgcQ==" crossorigin="anonymous" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 </head>
 <body>
